{
  "version": 4,
  "terraform_version": "1.9.5",
  "serial": 15,
  "lineage": "86f98cd2-863e-0c74-6d5b-6c075604beb4",
  "resources": [
    {
      "module": "module.gke",
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "default3",
            "metadata": [
              {
                "generation": 0,
                "name": "default3",
                "resource_version": "230052",
                "uid": "eb954690-d948-4beb-b8d4-6c96ac78c52f"
              }
            ],
            "wait_for_default_service_account": false
          },
          "dependencies": [
            "module.gke.google_container_cluster.primary",
            "module.gke.google_container_node_pool.primary_nodes",
            "module.iam.google_service_account.k8s_sa",
            "module.network.google_compute_network.vpc_network",
            "module.network.google_compute_subnetwork.subnetwork"
          ]
        }
      ]
    },
    {
      "module": "module.gke",
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "api_service",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "default3/gke-terraform-api2-service",
            "metadata": [
              {
                "generation": 0,
                "name": "gke-terraform-api2-service",
                "namespace": "default3",
                "resource_version": "240289",
                "uid": "1ee205ab-27d2-4e41-bb4a-29015736a65e"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "34.118.231.205",
                "cluster_ips": [
                  "34.118.231.205"
                ],
                "external_traffic_policy": "Cluster",
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "node_port": 31386,
                    "port": 80,
                    "protocol": "TCP",
                    "target_port": "8080"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app": "gke-terraform-api2"
                },
                "session_affinity": "None",
                "type": "LoadBalancer"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": [
                      {
                        "ip": "35.238.1.172"
                      }
                    ]
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "dependencies": [
            "module.gke.google_container_cluster.primary",
            "module.gke.google_container_node_pool.primary_nodes",
            "module.gke.kubernetes_namespace.default",
            "module.iam.google_service_account.k8s_sa",
            "module.network.google_compute_network.vpc_network",
            "module.network.google_compute_subnetwork.subnetwork"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-09-03T09:32:58.758-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [
              "0.0.0.0/0"
            ],
            "direction": "EGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/mapu-282718/global/firewalls/allow-egress",
            "log_config": [],
            "name": "allow-egress",
            "network": "https://www.googleapis.com/compute/v1/projects/mapu-282718/global/networks/gke-vpc2",
            "priority": 1000,
            "project": "mapu-282718",
            "self_link": "https://www.googleapis.com/compute/v1/projects/mapu-282718/global/firewalls/allow-egress",
            "source_ranges": [],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_health_checks",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-09-03T07:35:05.967-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/mapu-282718/global/firewalls/allow-health-checks2",
            "log_config": [],
            "name": "allow-health-checks2",
            "network": "https://www.googleapis.com/compute/v1/projects/mapu-282718/global/networks/gke-vpc2",
            "priority": 1000,
            "project": "mapu-282718",
            "self_link": "https://www.googleapis.com/compute/v1/projects/mapu-282718/global/firewalls/allow-health-checks2",
            "source_ranges": [
              "130.211.0.0/22",
              "35.191.0.0/16"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "http-server",
              "https-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-09-03T07:35:05.925-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/mapu-282718/global/firewalls/allow-internal2",
            "log_config": [],
            "name": "allow-internal2",
            "network": "https://www.googleapis.com/compute/v1/projects/mapu-282718/global/networks/gke-vpc2",
            "priority": 1000,
            "project": "mapu-282718",
            "self_link": "https://www.googleapis.com/compute/v1/projects/mapu-282718/global/firewalls/allow-internal2",
            "source_ranges": [
              "10.0.0.0/16"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "internal"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-09-03T07:35:05.915-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/mapu-282718/global/firewalls/allow-ssh2",
            "log_config": [],
            "name": "allow-ssh2",
            "network": "https://www.googleapis.com/compute/v1/projects/mapu-282718/global/networks/gke-vpc2",
            "priority": 1000,
            "project": "mapu-282718",
            "self_link": "https://www.googleapis.com/compute/v1/projects/mapu-282718/global/firewalls/allow-ssh2",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "ssh"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": true,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/mapu-282718/global/networks/gke-vpc2",
            "mtu": 0,
            "name": "gke-vpc2",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "project": "mapu-282718",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/mapu-282718/global/networks/gke-vpc2"
          }
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_router",
      "name": "nat_router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-09-03T07:35:06.452-07:00",
            "encrypted_interconnect_router": false,
            "id": "projects/mapu-282718/regions/us-central1/routers/nat-router2",
            "name": "nat-router2",
            "network": "https://www.googleapis.com/compute/v1/projects/mapu-282718/global/networks/gke-vpc2",
            "project": "mapu-282718",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/mapu-282718/regions/us-central1/routers/nat-router2"
          },
          "dependencies": [
            "module.network.google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "nat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_dynamic_port_allocation": false,
            "enable_endpoint_independent_mapping": true,
            "icmp_idle_timeout_sec": 30,
            "id": "mapu-282718/us-central1/nat-router2/nat-gw",
            "max_ports_per_vm": 0,
            "min_ports_per_vm": 0,
            "name": "nat-gw",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "mapu-282718",
            "region": "us-central1",
            "router": "nat-router2",
            "source_subnetwork_ip_ranges_to_nat": "ALL_SUBNETWORKS_ALL_IP_RANGES",
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_time_wait_timeout_sec": 120,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "module.network.google_compute_network.vpc_network",
            "module.network.google_compute_router.nat_router"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnetwork",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-09-03T06:58:33.810-07:00",
            "gateway_address": "10.0.0.1",
            "id": "projects/mapu-282718/regions/us-central1/subnetworks/gke-vpc2-subnet",
            "ip_cidr_range": "10.0.0.0/16",
            "name": "gke-vpc2-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/mapu-282718/global/networks/gke-vpc2",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "mapu-282718",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "10.76.0.0/14",
                "range_name": "gke-gke-cluster2-pods-6d52657f"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/mapu-282718/regions/us-central1/subnetworks/gke-vpc2-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.network.google_compute_network.vpc_network"
          ]
        }
      ]
    }
  ]
}